[gd_scene load_steps=6 format=3 uid="uid://bwxtebcpfcui5"]

[ext_resource type="Script" path="res://Scripts/cassette_slot.gd" id="1_4stge"]
[ext_resource type="FontFile" uid="uid://c6so5el4ru2ys" path="res://Font/Handjet-Regular.ttf" id="2_kityf"]
[ext_resource type="Texture2D" uid="uid://cif5jgxvucgdk" path="res://Images/Dashboard/open slot top.png" id="4_fcttn"]
[ext_resource type="Texture2D" uid="uid://cu2i7yq2pxv3j" path="res://Images/Dashboard/open slot bottom.png" id="5_lnoyh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_er7jg"]
size = Vector2(315, 40)

[node name="CassetteSlot" type="Node2D"]
script = ExtResource("1_4stge")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(40, 1)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-40.5, -1)
shape = SubResource("RectangleShape2D_er7jg")

[node name="Fuel_Amount" type="Label" parent="."]
modulate = Color(1, 1, 1, 0.0784314)
offset_left = 317.0
offset_top = -23.0
offset_right = 357.0
offset_bottom = 20.0
theme_override_colors/font_color = Color(0.85098, 0.517647, 0, 1)
theme_override_fonts/font = ExtResource("2_kityf")
theme_override_font_sizes/font_size = 30
text = "0"
horizontal_alignment = 2
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Side" type="Label" parent="."]
modulate = Color(1, 1, 1, 0.0784314)
offset_left = 183.0
offset_top = -22.0
offset_right = 343.0
offset_bottom = 21.0
theme_override_colors/font_color = Color(0.85098, 0.517647, 0, 1)
theme_override_fonts/font = ExtResource("2_kityf")
theme_override_font_sizes/font_size = 30
text = "SIDE: "
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="TopClosingCover" type="Sprite2D" parent="."]
position = Vector2(-2, -21)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_fcttn")
offset = Vector2(0, 42)

[node name="BottomClosingCover" type="Sprite2D" parent="."]
position = Vector2(-2, 21)
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_lnoyh")
offset = Vector2(0, -42)

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
